liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
#define OS_ERR_MAGIC_WORD 2712847352
typedef int INT32;
typedef unsigned int UINT32;
typedef char CHAR;
typedef unsigned short UINT16;
typedef void (*HWI_PROC_FUNC)(void);
typedef unsigned char UINT8;
typedef unsigned long long UINT64;
typedef struct ArchTickTimer {
  UINT32 freq;
  INT32 irqNum;
  UINT64 periodMax;
  UINT32 (*init)(HWI_PROC_FUNC tickHandler);
  UINT64 (*getCycle)(UINT32 *period);
  UINT64 (*reload)(UINT64 time);
  void (*lock)(void);
  void (*unlock)(void);
  HWI_PROC_FUNC tickHandler;
} ArchTickTimer;
typedef unsigned int LOS_MODULE_ID;
#define LOS_MODULE_ID_LOS_MOD_SYS 0
#define LOS_MODULE_ID_LOS_MOD_MEM 1
#define LOS_MODULE_ID_LOS_MOD_TSK 2
#define LOS_MODULE_ID_LOS_MOD_SWTMR 3
#define LOS_MODULE_ID_LOS_MOD_TICK 4
#define LOS_MODULE_ID_LOS_MOD_MSG 5
#define LOS_MODULE_ID_LOS_MOD_QUE 6
#define LOS_MODULE_ID_LOS_MOD_SEM 7
#define LOS_MODULE_ID_LOS_MOD_MBOX 8
#define LOS_MODULE_ID_LOS_MOD_HWI 9
#define LOS_MODULE_ID_LOS_MOD_HWWDG 10
#define LOS_MODULE_ID_LOS_MOD_CACHE 11
#define LOS_MODULE_ID_LOS_MOD_HWTMR 12
#define LOS_MODULE_ID_LOS_MOD_MMU 13
#define LOS_MODULE_ID_LOS_MOD_LOG 14
#define LOS_MODULE_ID_LOS_MOD_ERR 15
#define LOS_MODULE_ID_LOS_MOD_EXC 16
#define LOS_MODULE_ID_LOS_MOD_CSTK 17
#define LOS_MODULE_ID_LOS_MOD_MPU 18
#define LOS_MODULE_ID_LOS_MOD_NMHWI 19
#define LOS_MODULE_ID_LOS_MOD_TRACE 20
#define LOS_MODULE_ID_LOS_MOD_IPC 24
#define LOS_MODULE_ID_LOS_MOD_TIMER 26
#define LOS_MODULE_ID_LOS_MOD_EVENT 28
#define LOS_MODULE_ID_LOS_MOD_MUX 29
#define LOS_MODULE_ID_LOS_MOD_CPUP 30
#define LOS_MODULE_ID_LOS_MOD_HOOK 31
#define LOS_MODULE_ID_LOS_MOD_PM 32
#define LOS_MODULE_ID_LOS_MOD_LMK 33
#define LOS_MODULE_ID_LOS_MOD_SHELL 49
#define LOS_MODULE_ID_LOS_MOD_SIGNAL 50
#define LOS_MODULE_ID_LOS_MOD_BUTT 51
extern UINT32 ArchEnterSleep(void);
/**
 * @ingroup los_timer
 * @brief Get tick timer control block.
 *
 * @par Description:
 * This API is used to get tick timer control block.
 *
 * @param  None
 *
 * @retval #tick timer control block
 * @par Dependency:
 * <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern struct ArchTickTimer *ArchSysTickTimerGet(void);
/**
 * @ingroup los_err
 * @brief Error handling function.
 *
 * @par Description:
 * This API is used to perform different operations according to error types.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  fileName  [IN] Log file that stores error information.
 * @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD.
 * @param  errorNo   [IN] Error code.
 * @param  paraLen   [IN] Length of the input parameter pPara.
 * @param  para      [IN] User label of the error.
 *
 * @retval LOS_OK The error is successfully processed.
 * @par Dependency:
 * <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_ErrHandle(CHAR *fileName,
                            UINT32 lineNo,
                            UINT32 errorNo,
                            UINT32 paraLen,
                            void *para);
extern UINT32 ArchEnterSleep(void);
/**
 * @ingroup los_timer
 * @brief Get tick timer control block.
 *
 * @par Description:
 * This API is used to get tick timer control block.
 *
 * @param  None
 *
 * @retval #tick timer control block
 * @par Dependency:
 * <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern struct ArchTickTimer *ArchSysTickTimerGet(void);
/**
 *  @ingroup  los_tick
 *  @brief: System timer cycles get function.
 *
 *  @par Description:
 *  This API is used to get system timer cycles.
 *
 * @attention:
 * <ul><li>None.</li></ul>
 *
 * @param: None.
 *
 * @retval: current system cycles.
 *
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 *
 */
extern UINT64 LOS_SysCycleGet(void);
/**
 * @ingroup los_err
 * @brief Error handling function.
 *
 * @par Description:
 * This API is used to perform different operations according to error types.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  fileName  [IN] Log file that stores error information.
 * @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD.
 * @param  errorNo   [IN] Error code.
 * @param  paraLen   [IN] Length of the input parameter pPara.
 * @param  para      [IN] User label of the error.
 *
 * @retval LOS_OK The error is successfully processed.
 * @par Dependency:
 * <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_ErrHandle(CHAR *fileName,
                            UINT32 lineNo,
                            UINT32 errorNo,
                            UINT32 paraLen,
                            void *para);
extern UINT32 ArchEnterSleep(void);
/**
 * @ingroup los_timer
 * @brief Get tick timer control block.
 *
 * @par Description:
 * This API is used to get tick timer control block.
 *
 * @param  None
 *
 * @retval #tick timer control block
 * @par Dependency:
 * <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern struct ArchTickTimer *ArchSysTickTimerGet(void);
/**
 *  @ingroup  los_tick
 *  @brief: System timer cycles get function.
 *
 *  @par Description:
 *  This API is used to get system timer cycles.
 *
 * @attention:
 * <ul><li>None.</li></ul>
 *
 * @param: None.
 *
 * @retval: current system cycles.
 *
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 *
 */
extern UINT64 LOS_SysCycleGet(void);
/**
 * @ingroup los_err
 * @brief Error handling function.
 *
 * @par Description:
 * This API is used to perform different operations according to error types.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  fileName  [IN] Log file that stores error information.
 * @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD.
 * @param  errorNo   [IN] Error code.
 * @param  paraLen   [IN] Length of the input parameter pPara.
 * @param  para      [IN] User label of the error.
 *
 * @retval LOS_OK The error is successfully processed.
 * @par Dependency:
 * <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_ErrHandle(CHAR *fileName,
                            UINT32 lineNo,
                            UINT32 errorNo,
                            UINT32 paraLen,
                            void *para);