liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

#[doc = " @ingroup los_err"]
#[doc = " @brief Define the pointer to the error handling function."]
#[doc = ""]
#[doc = " @par Description:"]
#[doc = " This API is used to define the pointer to the error handling function."]
#[doc = " @attention"]
#[doc = " <ul>"]
#[doc = " <li>None.</li>"]
#[doc = " </ul>"]
#[doc = ""]
#[doc = " @param  fileName  [IN] Log file that stores error information."]
#[doc = " @param  lineNo    [IN] Line number of the erroneous line."]
#[doc = " @param  errorNo   [IN] Error code."]
#[doc = " @param  paraLen   [IN] Length of the input parameter pPara."]
#[doc = " @param  para      [IN] User label of the error."]
#[doc = ""]
#[doc = " @retval None."]
#[doc = " @par Dependency:"]
#[doc = " <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>"]
#[doc = " @see None."]
pub type LOS_ERRORHANDLE_FUNC = ::std::option::Option<
    unsafe extern "C" fn(
        fileName: *mut CHAR,
        lineNo: UINT32,
        errorNo: UINT32,
        paraLen: UINT32,
        para: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[doc = " @ingroup los_err"]
    #[doc = " @brief Error handling function."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to perform different operations according to error types."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  fileName  [IN] Log file that stores error information."]
    #[doc = " @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD."]
    #[doc = " @param  errorNo   [IN] Error code."]
    #[doc = " @param  paraLen   [IN] Length of the input parameter pPara."]
    #[doc = " @param  para      [IN] User label of the error."]
    #[doc = ""]
    #[doc = " @retval LOS_OK The error is successfully processed."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None"]
    pub fn LOS_ErrHandle(
        fileName: *mut CHAR,
        lineNo: UINT32,
        errorNo: UINT32,
        paraLen: UINT32,
        para: *mut ::std::os::raw::c_void,
    ) -> UINT32;
}
#[doc = " @ingroup los_err"]
#[doc = " Error handling function structure."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagUserErrFunc {
    #[doc = "< Hook function for error handling."]
    pub pfnHook: LOS_ERRORHANDLE_FUNC,
}
#[test]
fn bindgen_test_layout_tagUserErrFunc() {
    assert_eq!(
        ::std::mem::size_of::<tagUserErrFunc>(),
        8usize,
        concat!("Size of: ", stringify!(tagUserErrFunc))
    );
    assert_eq!(
        ::std::mem::align_of::<tagUserErrFunc>(),
        8usize,
        concat!("Alignment of ", stringify!(tagUserErrFunc))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagUserErrFunc>())).pfnHook as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(tagUserErrFunc),
            "::",
            stringify!(pfnHook)
        )
    );
}
#[doc = " @ingroup los_err"]
#[doc = " Error handling function structure."]
pub type UserErrFunc = tagUserErrFunc;
pub const LOS_MODULE_ID_LOS_MOD_SYS: LOS_MODULE_ID = 0;
pub const LOS_MODULE_ID_LOS_MOD_MEM: LOS_MODULE_ID = 1;
pub const LOS_MODULE_ID_LOS_MOD_TSK: LOS_MODULE_ID = 2;
pub const LOS_MODULE_ID_LOS_MOD_SWTMR: LOS_MODULE_ID = 3;
pub const LOS_MODULE_ID_LOS_MOD_TICK: LOS_MODULE_ID = 4;
pub const LOS_MODULE_ID_LOS_MOD_MSG: LOS_MODULE_ID = 5;
pub const LOS_MODULE_ID_LOS_MOD_QUE: LOS_MODULE_ID = 6;
pub const LOS_MODULE_ID_LOS_MOD_SEM: LOS_MODULE_ID = 7;
pub const LOS_MODULE_ID_LOS_MOD_MBOX: LOS_MODULE_ID = 8;
pub const LOS_MODULE_ID_LOS_MOD_HWI: LOS_MODULE_ID = 9;
pub const LOS_MODULE_ID_LOS_MOD_HWWDG: LOS_MODULE_ID = 10;
pub const LOS_MODULE_ID_LOS_MOD_CACHE: LOS_MODULE_ID = 11;
pub const LOS_MODULE_ID_LOS_MOD_HWTMR: LOS_MODULE_ID = 12;
pub const LOS_MODULE_ID_LOS_MOD_MMU: LOS_MODULE_ID = 13;
pub const LOS_MODULE_ID_LOS_MOD_LOG: LOS_MODULE_ID = 14;
pub const LOS_MODULE_ID_LOS_MOD_ERR: LOS_MODULE_ID = 15;
pub const LOS_MODULE_ID_LOS_MOD_EXC: LOS_MODULE_ID = 16;
pub const LOS_MODULE_ID_LOS_MOD_CSTK: LOS_MODULE_ID = 17;
pub const LOS_MODULE_ID_LOS_MOD_MPU: LOS_MODULE_ID = 18;
pub const LOS_MODULE_ID_LOS_MOD_NMHWI: LOS_MODULE_ID = 19;
pub const LOS_MODULE_ID_LOS_MOD_TRACE: LOS_MODULE_ID = 20;
pub const LOS_MODULE_ID_LOS_MOD_IPC: LOS_MODULE_ID = 24;
pub const LOS_MODULE_ID_LOS_MOD_TIMER: LOS_MODULE_ID = 26;
pub const LOS_MODULE_ID_LOS_MOD_EVENT: LOS_MODULE_ID = 28;
pub const LOS_MODULE_ID_LOS_MOD_MUX: LOS_MODULE_ID = 29;
pub const LOS_MODULE_ID_LOS_MOD_CPUP: LOS_MODULE_ID = 30;
pub const LOS_MODULE_ID_LOS_MOD_HOOK: LOS_MODULE_ID = 31;
pub const LOS_MODULE_ID_LOS_MOD_PM: LOS_MODULE_ID = 32;
pub const LOS_MODULE_ID_LOS_MOD_LMK: LOS_MODULE_ID = 33;
pub const LOS_MODULE_ID_LOS_MOD_SHELL: LOS_MODULE_ID = 49;
pub const LOS_MODULE_ID_LOS_MOD_SIGNAL: LOS_MODULE_ID = 50;
pub const LOS_MODULE_ID_LOS_MOD_BUTT: LOS_MODULE_ID = 51;
pub type LOS_MODULE_ID = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArchTickTimer {
    pub freq: UINT32,
    pub irqNum: INT32,
    pub periodMax: UINT64,
    pub init: ::std::option::Option<unsafe extern "C" fn(tickHandler: HWI_PROC_FUNC) -> UINT32>,
    pub getCycle: ::std::option::Option<unsafe extern "C" fn(period: *mut UINT32) -> UINT64>,
    pub reload: ::std::option::Option<unsafe extern "C" fn(time: UINT64) -> UINT64>,
    pub lock: ::std::option::Option<unsafe extern "C" fn()>,
    pub unlock: ::std::option::Option<unsafe extern "C" fn()>,
    pub tickHandler: HWI_PROC_FUNC,
}
#[test]
fn bindgen_test_layout_ArchTickTimer() {
    assert_eq!(
        ::std::mem::size_of::<ArchTickTimer>(),
        64usize,
        concat!("Size of: ", stringify!(ArchTickTimer))
    );
    assert_eq!(
        ::std::mem::align_of::<ArchTickTimer>(),
        8usize,
        concat!("Alignment of ", stringify!(ArchTickTimer))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).freq as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(freq)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).irqNum as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(irqNum)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).periodMax as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(periodMax)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).init as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(init)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).getCycle as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(getCycle)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).reload as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(reload)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).lock as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(lock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).unlock as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(unlock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ArchTickTimer>())).tickHandler as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ArchTickTimer),
            "::",
            stringify!(tickHandler)
        )
    );
}
extern "C" {
    pub fn ArchEnterSleep() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_timer"]
    #[doc = " @brief Get tick timer control block."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to get tick timer control block."]
    #[doc = ""]
    #[doc = " @param  None"]
    #[doc = ""]
    #[doc = " @retval #tick timer control block"]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_timer.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn ArchSysTickTimerGet() -> *mut ArchTickTimer;
}
extern "C" {
    #[doc = "  @ingroup  los_tick"]
    #[doc = "  @brief: System timer cycles get function."]
    #[doc = ""]
    #[doc = "  @par Description:"]
    #[doc = "  This API is used to get system timer cycles."]
    #[doc = ""]
    #[doc = " @attention:"]
    #[doc = " <ul><li>None.</li></ul>"]
    #[doc = ""]
    #[doc = " @param: None."]
    #[doc = ""]
    #[doc = " @retval: current system cycles."]
    #[doc = ""]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    #[doc = ""]
    pub fn LOS_SysCycleGet() -> UINT64;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " Ticks per second"]
    pub static mut g_ticksPerSec: UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " Cycles per Second"]
    pub static mut g_uwCyclePerSec: UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " Cycles per Tick"]
    pub static mut g_cyclesPerTick: UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " System Clock"]
    pub static mut g_sysClock: UINT32;
}
#[doc = " @ingroup los_tick"]
#[doc = " system time structure."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TagSysTime {
    #[doc = "< value 1970 ~ 2038 or 1970 ~ 2100"]
    pub uwYear: UINT16,
    #[doc = "< value 1 - 12"]
    pub ucMonth: UINT8,
    #[doc = "< value 1 - 31"]
    pub ucDay: UINT8,
    #[doc = "< value 0 - 23"]
    pub ucHour: UINT8,
    #[doc = "< value 0 - 59"]
    pub ucMinute: UINT8,
    #[doc = "< value 0 - 59"]
    pub ucSecond: UINT8,
    #[doc = "< value 0 - 6"]
    pub ucWeek: UINT8,
}
